--- a/css/all.css
+++ b/css/all.css
@@ -39,19 +39,15 @@ input:focus, button:focus { outline: none; }
 
 .sidebar__add::after { -webkit-transform: translate(-50%, -50%) rotate(90deg); transform: translate(-50%, -50%) rotate(90deg); }
 
-.sidebar__dropdown { display: none; background-color: #4973BB; padding: 30px; margin: 1rem 0; }
+.sidebar__dropdown { display: none; background-color: #4973BB; padding: 8px 25px; margin: 1rem 0; }
 
-@media (min-width: 62em) { .sidebar__dropdown { padding: 20px; } }
+@media (min-width: 62em) { .sidebar__dropdown { padding: 8px 30px; } }
 
-@media (min-width: 75em) { .sidebar__dropdown { margin: 24px 0; padding: 20px 35px; } }
+@media (min-width: 75em) { .sidebar__dropdown { margin: 24px 0; padding: 8px 35px; } }
 
 .sidebar__dropdown.is-active { display: block; }
 
 .sidebar__dropdown-item:not(:last-child) { border-bottom: 1px solid #ffffff; }
-
-.sidebar__dropdown-item:first-child .sidebar__dropdown-link { padding-top: 0; }
-
-.sidebar__dropdown-item:last-child .sidebar__dropdown-link { padding-bottom: 0; }
 
 .sidebar__dropdown-link { position: relative; display: block; color: #A7C5F9; padding: 1rem 0; -webkit-transition: color .3s; transition: color .3s; }
 
@@ -131,9 +127,9 @@ input.form-control { color: #6D6D6D; }
 
 .form-control--gray-400 { border: 1px solid #BFC0C0; }
 
-.table-responsive { overflow-x: auto; }
+.table-min { overflow-x: auto; }
 
-.table-responsive table { min-width: 1400px; }
+.table-min table { min-width: 1300px; }
 
 .modal { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1000; opacity: 0; visibility: hidden; -webkit-transition: all .7s; transition: all .7s; background-color: rgba(0, 0, 0, 0.6); overflow-x: hidden; overflow-y: auto; }
 
